--- a/eugene/Test/README
+++ b/eugene/Test/README
@@ -1,17 +1,21 @@
-#============================================================================
-#=             Copyright (c) 2002 by INRA. All rights reserved.             
-#=                 Redistribution is not permitted without                  
-#=                 the express written permission of INRA.                 
-#=                     Mail : tschiex@toulouse.inra.fr                     
-#=-------------------------------------------------------------------------
-#= File         : EuGeneTk/Test/README
-#= Description  : Description of the directories contents
-#= Authors      : P.Bardou, S.Foissac, M.J.Cros, A.Moisan, T.Schiex    
-#= Creation     : July 2003   
-#===========================================================================
-
-
-########################## Directory structure ########################
+# ------------------------------------------------------------------
+# Copyright (C) 2004 INRA <eugene@ossau.toulouse.inra.fr>
+#
+# This program is open source; you can redistribute it and/or modify
+# it under the terms of the Artistic License (see LICENSE file).
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
+#
+# You should have received a copy of Artistic License along with
+# this program; if not, please see http://www.opensource.org
+#
+# $Id$
+# ------------------------------------------------------------------
+# File:     Test/README
+# Contents: Description of the Test directory
+# ------------------------------------------------------------------
 
                                
                                    Test
