--- a/eugene/src/SensorPlugins/BlastX/GetData/README
+++ b/eugene/src/SensorPlugins/BlastX/GetData/README
@@ -1,4 +1,4 @@
-To obtain the .blast files needed by EuGene for the Blastx Sensor:
+To obtain the .blast files needed by eugene for the BlastX Sensor:
 
 First, if it's not done:
 
