Add Thomas mail.

--- a/eugene/AUTHORS
+++ b/eugene/AUTHORS
@@ -1,7 +1,7 @@
 Authors of eugene.
 See also the files THANKS and ChangeLog.
 
-Thomas Schiex designed and implemented eugene.
+Thomas Schiex <tschiex@toulouse.inra.fr> designed and implemented eugene.
 Other INRA persons contribute to the software:
 Philippe Bardou <bardou@toulouse.inra.fr>
 Marie-Josée Cros <cros@toulouse.inra.fr>
