Updated docs. Only the Homology plugin is still undocumented.

--- a/eugene/doc/Doc_BlastX.tex
+++ b/eugene/doc/Doc_BlastX.tex
@@ -63,7 +63,7 @@ where:
 \begin{itemize}
 \item $b^S$ and $e^S$ are the begin and the end of the similarity S on the sequence,
 \item $s^S$ is the score of the similarity S,
-\item $v^S$ is the e-value given by BlastX and ignored by \EuGenie,
+\item $v^S$ is the e-value given by BlastX and ignored by \EuGene,
 \item $p^S$ is the phase: +1, +2, +3, -1, -2, -3,
 item $bp^S$ and $ep^S$are the begin and the end of the similarity S on the protein.
 \end{itemize}
@@ -108,7 +108,7 @@ printed to alert the user.
 \paragraph{Integration of information}
 
 The procedure consists first, in computing information at the
-nucleotide level and second, in weigthing the graph used by \EuGenie.
+nucleotide level and second, in weigthing the graph used by \EuGene.
 
 A/ Computing information at the nucleotide level\\
 A-1/ Extracting information
