--- a/eugene/doc/Doc_GFF.tex
+++ b/eugene/doc/Doc_GFF.tex
@@ -6,7 +6,7 @@
 
 The GFF sensor allows to add to the graphical representation an
 annotation provided in a GFF format. Note that the provided GFF
-annotation could be an \EuGenie prediction given in GFF format
+annotation could be an \EuGene prediction given in GFF format
 (obtained using the $-pg$ argument). This could allow to visualise two
 predictions on the same graph.
 
