--- a/eugene/doc/Doc_GSplicer.tex
+++ b/eugene/doc/Doc_GSplicer.tex
@@ -70,7 +70,7 @@ No filter.
 
 \paragraph{Integration of information}
 
-The procedure consists in weigthing the graph used by \EuGenie. For
+The procedure consists in weigthing the graph used by \EuGene. For
 each predicted site the edge corresponding to the good transition is
 weighted by: $(s_i * coef) - pen$.  Where $s_i$ is the score given by
 \textsc{GeneSplicer}, $coef$ and $pen$ are given in the parameter
