--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -13,23 +13,52 @@
 
 \parskip 5pt plus 3pt minus 2pt 
 
-\newcommand{\EuGenie}{\textsc{EuG-bène}}-A
+\newcommand{\EuGene}{\textsc{EuG\`ene}}
 % comment one of the above line to hide or not the developpers documentation
 %\newcommand{\shrink}[1]{}   % hide text
 \newcommand{\shrink}[1]{#1} % no effect
 
-\author{Philipe Bardou, Marie-Jos-bée Cros, Sylvain Foissac, Annick Moisan,Thomas Schiex\\Biometry and AI Dept.\\ INRA Toulouse\\France}-A
+\author{Philipe Bardou, Marie-Jos\'ee Cros, Sylvain Foissac, Annick Moisan,Thomas Schiex\\Biometry and AI Dept.\\ INRA Toulouse\\INRA France}
 
-\title{\EuGenie: an open gene finder for eukaryotes}
+\title{\EuGene: an open gene finder for eukaryotes}
 
 \begin{document}
 \maketitle
 \tableofcontents
 
+\begin{abstract}
+  \EuGene\ is a sophisticated open gene finder for eukaryotic
+  organisms. It has been developped thanks to funding by INRA
+  (permanent scientists and engineers), G\'enoplante and the french
+  ministry of research (with one PhD student). It is written in C++,
+  generates text, HTML and graphical output.
+  
+  \EuGene\ uses a graph based model to predict genes that covers both
+  HMM based or more complex Bayesian net based probabilistic
+  predictions. The model is fixed but complex (with 43 different
+  states) and covers UTR, UTR introns\ldots each with a possible explicit
+  distribution on length. The prediction itself relies on an optimal
+  linear time and space algorithm for prediction.
+  
+  Even if the gene model is fixed, the sources of information taken
+  into account be \EuGene\ for prediction are extremely varied and can
+  be easily extended by creating so-called plugins. Currently,
+  \EuGene\ can use around 30 different plugins integrating statistical
+  information (Markov models at DNA or amino acid level, WAM, Support
+  Vector machine based signal prediction\ldots), similarity information
+  (Est, cDNA, proteins) and homology (exon conservation). It can also
+  integrate prediction from other gene predictors if needed.
+  
+  In orer to integrate all this information, \EuGene\ does not use
+  maximum likelihood estimation for all parameters but parameters
+  optimized by maximum of prediction quality on expertized data sets.
+ \end{abstract}
+
 \chapter{Quick Start}
+
 \section{Annoting a sequence}
 Here is a small example followed by a minimal documentation on
-\EuGenie\ (the \emph{Arabidopsis thaliana} instanciation of \EuGenie).
+\EuGene\ (the \emph{Arabidopsis thaliana} instanciation of \EuGene).
 For our example, we have used the \texttt{SYNO\_ARATH.fasta} sequence.
 
 \begin{Verbatim}[fontsize=\scriptsize]
@@ -47,14 +76,14 @@ the paths to the executables).
 
 \begin{Verbatim}[fontsize=\scriptsize]
 > ./getsites4eugene.pl Sequences/SYNO_ARATH.fasta 
-started on sam d-béc 7 13:44:35 CET 2002-A
+started on sam d\'ec 7 13:44:35 CET 2002
 
 processing Sequences/SYNO_ARATH.fasta
 
 NetStart [2*1 request(s)]: F1..R1..done
 NetGene2 [1   request(s)]: 1..FR..done
 SplicePredictor: done
-finished on sam d-béc 7 13:47:14 CET 2002-A
+finished on sam d\'ec 7 13:47:14 CET 2002
 \end{Verbatim}
 
 The script creates the files that contains information about the
@@ -63,8 +92,8 @@ extensions used are \texttt{.splices} for NetGene2, \texttt{.spliceP}
 for SplicePredictor, \texttt{.starts} for NetStart (in each case, a
 \texttt{R} is added for the reverse strand). 
 
-We are now ready to use \EuGenie\ on this sequence. Because the
-sequence lacks context around the CDS of the gene, we inform \EuGenie\ 
+We are now ready to use \EuGene\ on this sequence. Because the
+sequence lacks context around the CDS of the gene, we inform \EuGene\ 
 that the prediction should start and end in intergenic mode using the
 \texttt{-s} flag. This behavior can also be controlled by all the
 \texttt{Prior} parameters in the program parameter file (see
@@ -81,12 +110,12 @@ If the standard output is saved in a file (for example adding '> \texttt{SYNO\_A
 
 \section{Using transcribed sequences}
 
-If you want to exploit similarities with cDNA/EST sequences, you have to inform \EuGenie\ of existing simiairities. These similarities
+If you want to exploit similarities with cDNA/EST sequences, you have to inform \EuGene\ of existing simiairities. These similarities
 should be available in a file with the \texttt{.est} extension. The
 format of this file is described in the EST plugin
 section~\ref{plugest}. It can easily be created from an existing FASTA
 databank of EST and cDNA using a patched version of \texttt{sim4}. The
-patch is provided with \EuGenie.
+patch is provided with \EuGene.
 
 \begin{Verbatim}[fontsize=\scriptsize]
 > sim4 Sequences/SYNO_ARATH.fasta cDNA A=6 > seqs/SYNO_ARATH.fasta.est
@@ -119,10 +148,10 @@ we get the following file:
    765    813 61 0 1 AV521563   15   61
 \end{Verbatim}
 
-We can now ask \EuGenie\ for a new prediction, including this new
+We can now ask \EuGene\ for a new prediction, including this new
 evidence using the \texttt{-d} flag (equivalently, the \texttt{Est}
-plugin can be activated by modifying \EuGenie\ parameter file).  When
-evidence from transcribed sequences is available, \EuGenie\ will
+plugin can be activated by modifying \EuGene\ parameter file).  When
+evidence from transcribed sequences is available, \EuGene\ will
 automatically report in the ;ast column of its output the percentage
 of bases of the element (exon, UTR\ldots) which is consistent with the
 available evidence. Here, the gene is almost completely covered by the
@@ -160,13 +189,13 @@ If one wants also to exploit similarities with homologous proteins, a
 similar file format can be used (see the corresponding plugin). The
 plugin can analyze similarities from several databases, each being
 associated with a specific ``level''. For each level, a confidence is
-defined in \EuGenie's parameter file. Usually, 3 databases are used:
+defined in \EuGene's parameter file. Usually, 3 databases are used:
 SwissProt, PIR and TrEMBL (from the highest confidence to the
 lowest). Each collection of similarity is stored in a file with an
 extension \texttt{.blast} followed by the level of the database
 (\texttt{ .blast0}, \texttt{.blast1}, ..., \texttt{.blast9}).  The
 script used create these files from the output of NCBI-BLASTX is
-copyrighted and is therefore not distributed with \EuGenie. It is not
+copyrighted and is therefore not distributed with \EuGene. It is not
 difficult to design another one. Here is an extract from
 \texttt{SYNO\_ARATH.fasta.blast0}:
 
@@ -186,7 +215,7 @@ difficult to design another one. Here is an extract from
 
 To exploit this information, the \texttt{-b} flag must be used,
 optionally followed by the set of levels to be exploited
-(``\texttt{012}'' means level 0, 1 and 2).  We start \EuGenie\ and ask
+(``\texttt{012}'' means level 0, 1 and 2).  We start \EuGene\ and ask
 for both EST and proteic similarities analysis. We again enforce the
 use of an intergenic mode on the beginning and end of the sequence.
 
@@ -203,14 +232,14 @@ section \ref{pluguser}). This plugin is activated using the
 \texttt{-U} flag. The plugin will read the file with extension
 \texttt{.user}. For example, imagine I know that the 5'UTR of the gene
 extends from position2 to 28 I can inject this information in
-\EuGenie\ as follows (the \texttt{10.0} gives a strong influence to
+\EuGene\ as follows (the \texttt{10.0} gives a strong influence to
 this information, see the plugin description):
 
 \begin{Verbatim}[fontsize=\scriptsize]
 utr5 f [2..28] 10.0
 \end{Verbatim} 
 
-If I use \EuGenie\ with the \texttt{-U} flag (and even without
+If I use \EuGene\ with the \texttt{-U} flag (and even without
 \texttt{-s}), we get the following prediction:
 
 \begin{Verbatim}[fontsize=\scriptsize]
@@ -236,57 +265,57 @@ Other plugins are described in the reference section of this document.
 \newpage
 \chapter{Reference documentation}
 
-To be executed, \EuGenie\ needs at least one file: this is the
-so-called parameter file.  \EuGenie\ behavior is entirely controlled
+To be executed, \EuGene\ needs at least one file: this is the
+so-called parameter file.  \EuGene\ behavior is entirely controlled
 by a set of parameters whose default values are available in this
 file. These default values can be altered by editing this file or for
 some values through flags in the command line (such as \texttt{-d},
 see below). Command line flags override any value in the parameter
-file. The name of the parameter file that \EuGenie\ seeks is obtained
-by adding the suffix ``\texttt{.par}'' to the name of the \EuGenie\ 
-command itself.  As it is distributed, \EuGenie\ command's name is
+file. The name of the parameter file that \EuGene\ seeks is obtained
+by adding the suffix ``\texttt{.par}'' to the name of the \EuGene\ 
+command itself.  As it is distributed, \EuGene\ command's name is
 \texttt{eugene} and accordingly the parameter file is
 \texttt{eugene.par}. If at some point you want to use several
 different parameter files, you can simply use symbolic links to the
 \texttt{eugene} binary executable. Using a symbolic link, with a
-specific name to call \EuGenie\ will enable you to load a different
+specific name to call \EuGene\ will enable you to load a different
 parameter file whose name is derived from the symbolic link name by
 ading `\texttt{`.par}'' The parameter file is first sought in the
 local directory.  If this fails, the value of the environment variable
 \texttt{EUGENEDIR} is used as a second possible path.
 
-\EuGenie\ gathers all informations on the FASTA sequences through
+\EuGene\ gathers all informations on the FASTA sequences through
 so-called ``plugins'' also called ``sensors''. A plugin is a small
 software component that can be dynamically loaded and that can inform
-\EuGenie\ about likely exonic, intronic, utr, intergenic regions and
+\EuGene\ about likely exonic, intronic, utr, intergenic regions and
 about signals in the sequence (either splice sites, translation starts
 and stops, transcription starts and stops and possible frameshifts).
 Plugins can typically embody Markov models (that characterize exonic,
 intronic\ldots regions) or splice site detectors or others.  Available
 sensors are stored in the \texttt{PLUGINS} directory and are
-dynamically loaded by \EuGenie\ according to the parameters.
+dynamically loaded by \EuGene\ according to the parameters.
 
-The typical call to \EuGenie\ is:
+The typical call to \EuGene\ is:
 
 \begin{Verbatim}[fontsize=\small]
 eugene <fasta files>
 \end{Verbatim}
 
 where each FASTA file contains one single DNA sequence. In this cas,
-the first action of \EuGenie\ is to seek and load the parameter file.
-All the parameters in this file are either used by \EuGenie\ or by the
+the first action of \EuGene\ is to seek and load the parameter file.
+All the parameters in this file are either used by \EuGene\ or by the
 plugins. Each plugin may have its own parameters. The following
-section describes all the parameters used by \EuGenie. Information
+section describes all the parameters used by \EuGene. Information
 about the parameters used by plugins is provided in each plugin
 section (see section~\ref{plug}).
 
-\section{\EuGenie's parameters}
+\section{\EuGene's parameters}
 \label{param}
 
-Here is a list of all the parameters which control \EuGenie's
+Here is a list of all the parameters which control \EuGene's
 behavior. When a command line flag exists that can modify the
 corresponding parameter, it is indicated.  All the parameters that
-control \EuGenie\'s behavior are available in the parameter file. This
+control \EuGene\'s behavior are available in the parameter file. This
 file has a relatively strict formatting. Each line can either be a
 comment line (the first character in the line must be a \verb # ) or a
 parameter definition. Empty lines are not allowed. A parameter
@@ -321,12 +350,12 @@ sensitive. The definition order is not important.
   \texttt{EuGene.ThreePrimePrior}: prior on the initial/final state of
   prediction. The ``\texttt{-s}'' command line flag can override these
   priors by setting all the non intergenic priors to $0.0$. This
-  forces \EuGenie\ to start and and its prediction in intergenic mode.
+  forces \EuGene\ to start and and its prediction in intergenic mode.
   
 \item \texttt{EuGene.InitExDist}, \texttt{EuGene.IntrExDist},
   \texttt{EuGene.TermExDist}, \texttt{EuGene.SnglExDist},
   \texttt{EuGene.IntronDist}, \texttt{EuGene.InterDist},
-  \texttt{EuGene.5PrimeDist}, \texttt{EuGene.3PrimeDist}: \EuGenie\ 
+  \texttt{EuGene.5PrimeDist}, \texttt{EuGene.3PrimeDist}: \EuGene\ 
   can use explicit penalty distributions on the length of the elements
   predicted. This can be an initial exon, and intermediary exon, a
   terminal exon, a single exon gene, an intron an intergenic region, a
@@ -354,7 +383,7 @@ sensitive. The definition order is not important.
   
 \item \texttt{Output.resx}, \texttt{Output.resy}: controls the
   horizontal and vertical resolution of the PNG images generated by
-  \EuGenie. 
+  \EuGene. 
   
 \item \texttt{Output.gfrom}, \texttt{Output.gto}: respectively
   controls which part of the sequence is to be plotted (eg. for
@@ -409,13 +438,53 @@ sensitive. The definition order is not important.
   current directory.
 \end{itemize}
 
+\subsection{Specification of explicit penalty distributions on length}
+
+As in semi-Markov models, \EuGene\ uses explicit distribution of
+penalties on the length of all predicted elements. The dynamic
+programming inside \EuGene\ garantees that \EuGene\ will run in linear
+time and space in the length of the sequence in all cases.
+
+The distributions handled by \EuGene\ are made of 3 components. First,
+there is a region of forbidden length (minimum length), then a region
+with an arbitrary penalty distribution, then a region with a linear
+variation of the penalty. Froma proabilitics point of view, this means
+an exponential tail.
+
+Although \EuGene\ is linear in time in the sequence length, it is also
+typically linear in time in the sum of the size of the two first
+regions. For the moment, all existing \EuGene\ instances use explicit
+distributions with an empty arbitrary region (the distribution is just
+a minimum length followed by an exponential tail).
+
+Explicit distributions must be specified in distribution files. Each
+line in a distribution file contains a length and a penalty. The first
+length used specifies the minimum allowed length. Then each line
+specifies a point of the explicit distribution. Linear interpolation
+is used between points. Then the last length used specifies the start
+of the linear tail. The last slope used becomes the slop of the linear
+tail.
+
+A
+typical distribution file is given below:
+\begin{Verbatim}
+3 0.0
+4 2.0
+6 4.0
+\end{Verbatim}
+
+It specifies a minimum length of 3. We then have an explicit
+distribution region with penalty 0.0 for 3, 2.0 for 4, 3.0 for 5
+(linear interpolation), then 4.0 at 6. Because this is the last point
+and the slope is 1, then the rest of the distribution will be linear
+with slope 1.
 
 \section{Plugins}
 \label{plug}
 
 Plugins are small software components that can be dynamically loaded
-by \EuGenie. Although it is completely transparent to the end-user,
-every plugin loaded by \EuGenie\ must be written in C++ and be a
+by \EuGene. Although it is completely transparent to the end-user,
+every plugin loaded by \EuGene\ must be written in C++ and be a
 subclass of the Sensor class. This class provides essentially four
 methods:
 \begin{itemize}
@@ -440,14 +509,14 @@ methods:
   (an instance of the \texttt{DNASeq} class), a position on the
   sequence and a \texttt{Data} instance. The \texttt{Data}
   data-structure can receive predictions on all signals and contents
-  scores know to \EuGenie.
+  scores know to \EuGene.
 
 \item \texttt{Plot}: receives as argument the sequence to process (an
   instance of the \texttt{DNASeq} class) and plots all the predictions
   made by the sensor.
 
 \item \texttt{PostAnalyse}: receives as argument the prediction of
-  \EuGenie\ and may check it agains its own prediction and report
+  \EuGene\ and may check it agains its own prediction and report
   support or inconsistencies.
 \end{itemize}
 
@@ -458,7 +527,7 @@ plugins for exceptions).
 
 \subsection{Loading plugins}
 
-When \EuGenie\ starts, plugins are loaded and instanciated following
+When \EuGene\ starts, plugins are loaded and instanciated following
 parameters in the parameter file. The \texttt{Sensor.*.use} may
 activate or desactivate the corresponding sensor (which must be
 available in the PLUGINS directory). If the parameter value is set to
@@ -468,7 +537,7 @@ loaded. If the parameter is set to an integer value, then this number
 of instances of the plugin are created.
 
 Below is the list of minimum plugins which are activated by default by
-the \emph{Arabidopsis thaliana} version of \EuGenie.
+the \emph{Arabidopsis thaliana} version of \EuGene.
 
 \begin{Verbatim}
 Sensor.Transcript.use   TRUE
@@ -534,43 +603,38 @@ We now descrive each plugin, its behavior and parameters.
 \input{Doc_NStart.tex}
 \input{Doc_ATGpr.tex}
 \input{Doc_StartWAM.tex}
-% A faire !
 \input{Doc_SpliceWAM.tex}
 \input{Doc_NG2.tex}
 \input{Doc_SPred.tex}
-\input {Doc_GSplicer.tex}
-\input {Doc_IfElse.tex}
-\input {Doc_FrameShift.tex}
-\input {Doc_MarkovConst.tex}
-\input {Doc_MarkovIMM.tex}
-\input {Doc_MarkovProt.tex}
-\input {Doc_Est.tex}
+\input{Doc_GSplicer.tex}
+\input{Doc_IfElse.tex}
+\input{Doc_FrameShift.tex}
+\input{Doc_MarkovConst.tex}
+\input{Doc_MarkovIMM.tex}
+\input{Doc_MarkovProt.tex}
+\input{Doc_Est.tex}
+\input{Doc_Riken.tex}
+\input{Doc_BlastX.tex}
+\input{Doc_Repeat.tex}
 % A faire !
-\input {Doc_Riken.tex}
-\input {Doc_BlastX.tex}
-\input {Doc_Repeat.tex}
-% A faire !
-\input {Doc_Homology.tex}
-% A faire !
-\input {Doc_User.tex}
-\input {Doc_GFF.tex}
-\input {Doc_Plotter.tex}
-\input {Doc_GCPlot.tex}
-\input {Doc_Tester.tex}
+\input{Doc_Homology.tex}
+\input{Doc_AnnotaStruct.tex}
+\input{Doc_User.tex}
+\input{Doc_GFF.tex}
+\input{Doc_Plotter.tex}
+\input{Doc_GCPlot.tex}
+\input{Doc_Tester.tex}
 
 
 \section{Optimization of Plugins parameters}
 
-
-
-
 The value of some numerical plugins parameters (specified in the
-parameter file with a name finishing with an '*') migth be optimized
-on a reference set of sequences (with their related information) for
+parameter file with a name finishing with an '*') can be optimized on
+a reference set of sequences (with their related information) for
 which genes positions are known. The idea is to adapt the values of
-parameters to increase as much as possible the prediction of genes and
-exons. The figure \ref{fig:ParaOptimization} details the general
-functioning of the software with input and ouput files.
+parameters to increase as much as possible the quality of prediction
+of genes and exons. The figure \ref{fig:ParaOptimization} details the
+general function of the software with input and ouput files.
 
 \begin{figure}[htbp]
   \begin{center}
@@ -580,16 +644,14 @@ functioning of the software with input and ouput files.
   \label{fig:ParaOptimization}
 \end{figure}
 
-
 The optimization can be lauched with the \texttt{-Z} argument
 \index{CmdFlags}{[parameters optimization] Z} on the command line or
 with the \texttt{ParaOptimization.Use} parameter set to \texttt{TRUE}.
 
-
-After updating the parameter file eugene.par (which sensors to
-use,...), the software is lauched with the usual command line
-specifying in argument the sequences to consider. At the end, the
-software creates a new parameter file called
+After updating the parameter file \texttt{eugene.par} (which sensors
+to use,...), the software is lauched with the usual command line
+specifying as argument the reference sequences to consider. At the
+end, the software creates a new parameter file called
 \texttt{eugene.<date>.OPTI.par} (for example,
 \texttt{eugene.30Sep2003.OPTI.par}) with the new value for the
 optimized parameters.
@@ -690,11 +752,6 @@ LineSearch.Para.Cluster[2]      1
 #
 \end{verbatim} }
 
-
-
-
-
-
 \section{Command line flags}
  
 \begin{itemize}
@@ -787,7 +844,7 @@ where
 \item \texttt{s}: forces non partial gene mode prediction. This forbids
   predictions that start and end in intergenic mode and therefore
   prevents the occurrence of partial gene structures on the border of
-  the sequence.  Useful if \EuGenie\ lacks context around the gene and
+  the sequence.  Useful if \EuGene\ lacks context around the gene and
   you know a single (or only complete) gene appears on the sequence.
   In practice this simply sets the parameters
   \texttt{EuGene.ExonPrior}, \texttt{EuGene.IntronPrior},
@@ -834,17 +891,16 @@ where
   extracted sequence without loosing the original position.
   
 \item \texttt{f}: the frameshift penalty. A large value prevents
-  \EuGenie\ from predicting frameshifts (the default).
+  \EuGene\ from predicting frameshifts (the default).
 \end{itemize}
 
 \printindex{CmdFlags}{Index of command line flags for sensors}
 
 
 For more information, have a look to
-\textsf{www-bia.inra.fr/T/EuGene}. This gives a rough idea of
-\EuGenie\ reliability and the meaning of the graphical output (PDF
-file, poster on \EuGenie).
-
+\textsf{www-bia.inra.fr/T/EuGene}. This gives a rough idea of \EuGene\ 
+reliability and the meaning of the graphical output (PDF file, poster
+on \EuGene).
 
 
 \end{document}
