--- a/eugene/doc/Doc_StartWAM.tex
+++ b/eugene/doc/Doc_StartWAM.tex
@@ -13,19 +13,18 @@ Matrix models (Salzberg, {\em Comput Appl Biosci} 1997
 Aug;13(4):365-76). A WAM describes a consensus motif of a functional
 signal, and is composed by one markovian model per each position of
 the motif. Here the motif is defined by the ATG (present in all start
-codons) plus the two flanking context (informating for the WAM).
-Globally, the score of a motif is function of the emission
-probabilities of this motif given a true positive model and a false
-positive model.
+codons) plus the two flanking contexts (used by the WAM).  Globally,
+the score of a motif is a function of the emission probabilities of
+this motif given a true positive model and a false positive model.
 
 The sensor is activated by setting the parameter
-\texttt{Sensor.SpliceWAM.use} to TRUE.  The user have to specify in
+\texttt{Sensor.StartWAM.use} to TRUE.  The user have to specify in
 the parameter file the base name (prefix) of the model files
 (\texttt{StartWAM.modelfilename}), the size of the context
 (\texttt{StartWAM.NbNtBeforeATG, StartWAM.NbNtAfterATG}), the order of
 the markovian models \texttt{StartWAM.MarkovianOrder} (the same for
 each position of the motif), and the scaling parameters
-\texttt{StartWAM.ScaleCoef, StartWAM.ScalePenalty}.
+\texttt{StartWAM.ScaleCoef*, StartWAM.ScalePenalty*}.
 
 Here is an example of StartWAM parameters definition.
 \begin{Verbatim}[fontsize=\small]
@@ -33,8 +32,8 @@ StartWAM.modelfilename     WAM/WAM.ARA.START  # base name of the model files
 StartWAM.NbNtBeforeATG     3                  # amount context
 StartWAM.NbNtAfterATG      3                  # aval context
 StartWAM.MarkovianOrder    1                  # order of the markovian models
-StartWAM.ScaleCoef         0.1594             # scaling parameter
-StartWAM.ScalePenalty      -3.1439            # scaling parameter
+StartWAM.ScaleCoef*         0.1594             # scaling parameter
+StartWAM.ScalePenalty*      -3.1439            # scaling parameter
 Sensor.StartWAM.use        TRUE               # Use StartWAM sensor
 Sensor.StartWAM            1                  # Sensor priority
 \end{Verbatim}
@@ -42,17 +41,17 @@ Sensor.StartWAM            1                  # Sensor priority
 \paragraph{Input files format}
 
 This StartWAM Sensor requires a true positive and a false positive
-model file per motif position, that is twice the motif length. These
-files have to be present in the path given by
-\texttt{StartWAM.modelfilename} from the plugins directory (see
-\texttt{EuGene.PluginsDir} parameter). These models can be generated
-using WAMbuilder.cc (see
-eugene/SensorPlugins/0\_SensorTk/GetData/README).  The file name of
-a model is a concatenation of the base name (prefix) specified in the
-parameter file, an extension (suffix) specified in the \texttt{WAM.h}
-file (\texttt{.TP.} for true positive and \texttt{.FP.}  for false
-positive), and a number between 00 and 99 indexing the position in the
-motif (restricting thus the motif length to a maximum of 100 nt).
+model file per motif position. These files have to be present in the
+path given by \texttt{StartWAM.modelfilename} from the plugins
+directory (see \texttt{EuGene.PluginsDir} parameter). These models can
+be generated using \texttt{WAMbuilder.cc} (see
+\texttt{eugene/src/SensorPlugins/0\_SensorTk/GetData/README}).  The
+file name of a model is a concatenation of the base name (prefix)
+specified in the parameter file, an extension (suffix) specified in
+the \texttt{WAM.h} file (\texttt{.TP.} for true positive and
+\texttt{.FP.}  for false positive), and a number between 00 and 99
+indexing the position in the motif (restricting thus the motif length
+to a maximum of 100 nt).
 
 As an example, with the base name \texttt{WAM.ARA.START9} (refering to
 {\em A.thaliana} models of 9nt-length start motif), one can found these files:
@@ -69,16 +68,17 @@ WAM.ARA.START9.TP.08
 \end{Verbatim}
 
 These files are in binary form, each containing the properties of a
-markovian model (see documentations of WAMbuilder.cc and markov.cc).
+markovian model (see documentations of \texttt{WAMbuilder.cc} and
+\texttt{markov.cc}).
 
 \paragraph{Filtering input information}
 
-Each binary model file is verified when loaded checking if 3 expected
-properties of its markovian model are as expected : the order, the
+Each binary model file is verified when loaded, checking if 3 expected
+properties of its markovian model are verified: the order, the
 alphabet size, and the total number of possible words (these 3 values
 are automatically included during the models generation by
-WAMbuilder.cc). This test is a property of the loading file method
-``chargefichier'' in markov.cc.
+\texttt{WAMbuilder.cc}). This test is done in the loading file method
+``\texttt{chargefichier}'' in markov.cc.
 
 \paragraph{Integration of information}
 
@@ -94,13 +94,15 @@ model. The score given by the WAM for the entire motif $M$ of length
 $L$ is:
 \[ S_M = \sum_{i=0}^{L} log\left(\frac{P^t_i}{P^f_i}\right) \]
 
-This score is then scaled with the \texttt{StartWAM.ScaleCoef} and the
-\texttt{StartWAM.ScalePenalty} parameters, following this formula :
-$$S_M . \texttt{StartWAMScaleCoef} + \texttt{StartWAMScalePenalty}$$
+This score is then scaled with the \texttt{StartWAM.ScaleCoef*} and the
+\texttt{StartWAM.ScalePenalty*} parameters, following this formula :
+$$S_M . \texttt{StartWAMScaleCoef*} + \texttt{StartWAMScalePenalty*}$$
 
-This rescaled score is finally integrated into the \EuGenie\ graph on
-the UTR5 $\to$ EXON transition edge just before the considered
-ATG.
+This rescaled score is finally integrated into the \EuGene\ graph on
+the UTR5 $\to$ EXON transition edge just before the considered ATG. The
+score applies only to the edge corresponding to the situation where
+the signal is used. The edge corresponding to the situation where the
+signal is not used is unchanged.
 
 \paragraph{Post analyse}
 
@@ -111,4 +113,4 @@ No Post-Analyse.
 Vertical blue lines (whose length is function of the score) are
 plotted on the corresponding frame for each start codon which score is
 higher than a defined treshold. This treshold is defined in the
-StartWAM.cc file as -\texttt{PlotScoreIncrease}.
+\texttt{StartWAM.cc} file as -\texttt{PlotScoreIncrease}.
